# rust_tide_api_template

./: Cargo.toml  README.md
src/: errors.rs  log.rs  main.rs
src/endpoints/: get.rs  handler.rs  mod.rs
src/entities/: jsons.rs  mod.rs
src/sql_service/: actions.rs  fetches.rs  mod.rs  sql_error.rs  tables.rs
