[package]
name = "rust_tide_api_template"
version = "0.1.0"
edition = "2024"

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [ "postgres","runtime-async-std", "tls-native-tls","macros" ] }
chrono = "0.4.41"
